--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div id="cuadroPokedex">
+        <header id="cuadroPokedex">
             <form id="buscador" action="">
                 <input type="text" id="valorFiltro">
                 <button id="filtro"> Buscar </button>
+                <button id="limpiar"> Borrar </button>
             </form>
-        </div>
+        </header>
 
         <div id="render">
             
