--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <body>
         <header id="cuadroPokedex">
             <form id="buscador" action="">
+                <h1>POKEDEX</h1>
                 <input type="text" id="valorFiltro">
                 <button id="filtro"> Buscar </button>
                 <button id="limpiar"> Borrar </button>
